--- a/06-maquetacion-web1/assets/css/style.css
+++ b/06-maquetacion-web1/assets/css/style.css
@@ -97,7 +97,8 @@ body {
   min-height: 100%;
   min-width: 30rem;
   background-color: #04B4E0;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  padding-top: 3rem; }
 
 .user-info__container-image {
   position: relative;
@@ -117,14 +118,151 @@ body {
   position: absolute;
   top: 5%;
   left: 9%;
-  z-index: 1;
+  z-index: -1;
   width: 100%;
   height: 100%;
   background-image: radial-gradient(ellipse, #fff, #fff 1px, transparent 0px, transparent 100%);
-  background-size: 0.6rem 0.6rem; }
+  background-size: 0.6rem 0.6rem;
+  border-radius: 30rem;
+  opacity: 0.4; }
+
+.user-info__name {
+  color: #FFFFFF;
+  font-size: 3.2rem;
+  font-weight: bold;
+  margin-top: 26px; }
+
+.user-info__job {
+  font-size: 1.7rem;
+  font-weight: 200;
+  color: #FFFFFF; }
+
+.user-info__links {
+  margin-bottom: 3.6rem; }
+
+.links__social {
+  text-align: center;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem; }
+
+.social__option {
+  height: 3rem;
+  width: 3rem;
+  font-size: 3rem;
+  line-height: 3.1rem;
+  opacity: 0.9;
+  border-radius: 30rem;
+  transition: all 300ms linear; }
+
+.social__option:hover {
+  opacity: 1;
+  background-color: rgba(255, 255, 255, 0.2); }
+
+.user-info__buttons {
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+  padding-top: 2rem; }
+
+.user-info__btn {
+  border: 2px solid #FFFFFF;
+  padding: 3rem;
+  padding-top: 1.3rem;
+  padding-bottom: 1.3rem;
+  border-radius: 3.2rem;
+  color: #FFFFFF;
+  box-shadow: 0px 10px 10px -8px rgba(0, 0, 0, 0.22);
+  transition: all 300ms ease-in-out;
+  font-size: 2rem; }
+
+.user-info__btn:hover {
+  background-color: #FFFFFF;
+  color: #04B4E0; }
+
+.user-info__footer {
+  position: absolute;
+  bottom: 2rem;
+  font-size: 1.2rem; }
 
 /*CONTENEDOR PRINCIPAL*/
 .layout__content {
-  grid-area: contentt; }
+  grid-area: contentt;
+  min-height: 100%;
+  height: 100%;
+  background-color: #04B4E0;
+  border-radius: 0 10rem 10rem 0; }
+
+.content__page {
+  min-height: 100%;
+  background-color: #FFFFFF;
+  border-radius: 3.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  gap: 3rem; }
+
+.page__name {
+  font-size: 6rem;
+  color: #222222; }
+
+.page__job {
+  font-size: 2.1rem;
+  font-weight: lighter;
+  color: #888; }
+
+/*MENI NAVEGACION LATERAL*/
+.layout__menu {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: -105px;
+  min-width: 11rem;
+  background-color: transparent; }
+
+.menu__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 2.5rem;
+  width: 60%;
+  min-height: 32rem;
+  padding: 2rem 0;
+  background-color: #FFFFFF;
+  box-shadow: 0 0 3rem -0.5rem rgba(0, 0, 0, 0.15);
+  border-radius: 6rem; }
+
+.menu__icon {
+  color: #B5B6B7;
+  font-size: 2.8rem;
+  transition: all 300ms ease-in-out; }
+
+.menu__option {
+  display: block;
+  width: 100%;
+  text-align: center; }
+
+.menu__icon:hover {
+  color: #04B4E0; }
+
+.menu__overlay {
+  position: absolute;
+  right: 0;
+  opacity: 0;
+  margin-top: -3rem;
+  display: block;
+  padding: 0.5rem 1rem;
+  color: #FFFFFF;
+  background-color: #04B4E0;
+  white-space: nowrap;
+  transition: all 300ms ease-in-out; }
+
+.menu__option:hover .menu__overlay {
+  opacity: 1;
+  right: 100%; }
 
 /*# sourceMappingURL=style.css.map */
