--- a/06-maquetacion-web1/assets/css/style.css
+++ b/06-maquetacion-web1/assets/css/style.css
@@ -44,6 +44,218 @@ form, input, select, textarea, button, label {
   color: inherit; }
 
 /*DEFINICIÓN VARIABLES*/
+/*SOBRE MÍ*/
+.about__header {
+  display: inline-block;
+  margin-bottom: 4.5rem; }
+
+.about__title {
+  font-size: 3.2rem;
+  position: relative; }
+
+.about__title::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  right: -25px;
+  width: 50px;
+  height: 30px;
+  background-image: linear-gradient(to right top, #04B4E0, #04B4E0 1px, transparent 0px, transparent 100%);
+  background-size: 0.6rem 0.6rem;
+  opacity: 0.5; }
+
+.title__color {
+  color: #04B4E0; }
+
+/*INFORMACION PERSONAL*/
+.about__personal-info {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-bottom: 5rem; }
+
+.personal-info__bio {
+  flex-basis: 56%; }
+
+.personal-info__description {
+  font-size: 1.5rem;
+  line-height: 2.4rem; }
+
+.personal-info__data {
+  flex-basis: 44%;
+  padding: 0 1.5rem; }
+
+.personal-info__option {
+  margin-bottom: 1rem; }
+
+.personal-info__title {
+  margin-right: 0.5rem;
+  color: #04B4E0;
+  font-weight: 600; }
+
+/*SERVICIOS*/
+.about__services,
+.about__reviews,
+.about__clients,
+.about__prices,
+.about__extra {
+  width: 100%;
+  margin-bottom: 2rem; }
+
+.services__header,
+.reviews__header,
+.clients__header,
+.prices__header,
+.extra__header {
+  display: inline-block;
+  padding-right: 1.2rem;
+  position: relative;
+  margin-bottom: 2.5rem; }
+
+.services__title,
+.reviews__title,
+.clients__title,
+.prices__title,
+.extra__title {
+  font-size: 2.1rem; }
+
+.services__title::after,
+.reviews__title::after,
+.clients__title::after,
+.prices__title::after,
+.extra__title::after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  right: 0px;
+  width: 30px;
+  height: 20px;
+  background-image: linear-gradient(to right top, #04B4E0, #04B4E0 1.5px, transparent 0px, transparent 100%);
+  background-size: 0.6rem 0.6rem;
+  opacity: 0.5; }
+
+.services__container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+
+.sevices__service {
+  flex-basis: calc(50% - 3rem);
+  margin-right: 3rem;
+  margin-bottom: 2.5rem; }
+
+.service__my-icon {
+  color: #04B4E0;
+  font-size: 3.8rem; }
+
+.service__title {
+  font-size: 1.8rem;
+  margin: 0.5rem 0; }
+
+.service__description {
+  font-size: 1.5rem;
+  text-align: justify; }
+
+/*REVIEWS*/
+.reviews__container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+
+.reviews__review {
+  flex-basis: calc(50% - 2.5rem);
+  border: 2px solid #E5E6E7;
+  border-radius: 2rem;
+  padding-top: 0;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+  padding-bottom: 1.5rem;
+  margin-right: 2.5rem;
+  margin-top: 4.5rem;
+  margin-bottom: 1rem; }
+
+.review__image-container {
+  width: 100%; }
+
+.review__image {
+  max-width: 9rem;
+  max-height: 9rem;
+  border-radius: 9rem;
+  margin: 0 auto;
+  margin-top: -4.5rem;
+  margin-bottom: 2rem;
+  box-shadow: 0px 10px 10px -8px rgba(0, 0, 0, 0.22); }
+
+.review__description {
+  margin-bottom: 1rem; }
+
+.review__text {
+  font-size: 1.5rem;
+  line-height: 2.4rem; }
+
+.review__author {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
+.review__name {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem; }
+
+.review__company {
+  color: #A5A6A7;
+  font-weight: 300;
+  font-size: 1.3rem; }
+
+.review__icon {
+  font-size: 4rem;
+  opacity: 0.5;
+  color: #04B4E0; }
+
+.content__page::-webkit-scrollbar {
+  width: 25px;
+  background-color: transparent;
+  /* Tamaño del scroll en vertical */ }
+
+.content__page::-webkit-scrollbar-thumb {
+  border: 10px solid transparent;
+  box-shadow: none;
+  border-radius: 40px; }
+
+.content__page:hover::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 0 10px #D3D3D3; }
+
+.content__page:hover::-webkit-scrollbar-thumb:hover {
+  border: 8px solid transparent;
+  box-shadow: inset 0 0 0 10px #04B4E0; }
+
+.content__page::-webkit-scrollbar-track {
+  margin: 40px 0; }
+
+/*Barra info*/
+.layout__aside::-webkit-scrollbar {
+  width: 25px;
+  background-color: #04B4E0; }
+
+.layout__aside::-webkit-scrollbar-thumb {
+  border: 10px solid transparent;
+  box-shadow: none;
+  border-radius: 40px; }
+
+.layout__aside:hover::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 0 10px #FFFFFF; }
+
+.layout__aside:hover::-webkit-scrollbar-thumb:hover {
+  border: 8px solid transparent;
+  box-shadow: inset 0 0 0 10px #FFFFFF; }
+
+.layout__aside::-webkit-scrollbar-track {
+  margin: 40px 0; }
+
+/*DEFINICIÓN VARIABLES*/
 /*ESTILOS GENERALES*/
 html {
   font-size: 10px; }
@@ -188,21 +400,31 @@ body {
 /*CONTENEDOR PRINCIPAL*/
 .layout__content {
   grid-area: contentt;
-  min-height: 100%;
   height: 100%;
+  min-height: 100%;
   background-color: #04B4E0;
   border-radius: 0 10rem 10rem 0; }
 
 .content__page {
-  min-height: 100%;
   background-color: #FFFFFF;
   border-radius: 3.2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  gap: 3rem; }
+  gap: 3rem;
+  height: 100%; }
+
+.content__about {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  height: 100%;
+  display: block;
+  height: 100%;
+  padding: 6rem;
+  padding-right: 3rem;
+  overflow: auto; }
 
 .page__name {
   font-size: 6rem;
@@ -213,7 +435,7 @@ body {
   font-weight: lighter;
   color: #888; }
 
-/*MENI NAVEGACION LATERAL*/
+/*MENU NAVEGACION LATERAL*/
 .layout__menu {
   display: block;
   position: absolute;
@@ -264,5 +486,103 @@ body {
 .menu__option:hover .menu__overlay {
   opacity: 1;
   right: 100%; }
+
+.about__clients {
+  width: 100%;
+  margin-bottom: 5rem; }
+
+.clients__header {
+  margin-bottom: 3rem; }
+
+.clients__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
+.clients__link {
+  display: block;
+  width: 100%;
+  opacity: 0.7; }
+
+.clients__link:hover {
+  opacity: 1;
+  transition: all 300ms linear; }
+
+.clients__image {
+  width: 150px;
+  padding: 1rem;
+  margin-bottom: 1rem; }
+
+.prices__container {
+  margin-bottom: 5rem;
+  display: flex;
+  flex-direction: row; }
+
+.prices__box {
+  height: 100%;
+  flex-basis: 50%;
+  margin-right: 3rem;
+  padding: 3rem;
+  border: 2px solid #E5E6E7;
+  text-align: center;
+  border-radius: 1.5rem;
+  transition: all 300ms ease-in-out; }
+
+.prices__box:last-of-type {
+  margin-right: 0rem; }
+
+.prices__box:hover {
+  box-shadow: 0px 18px 24px -5px rgba(0, 0, 0, 0.15);
+  transform: translateY(-1rem); }
+
+.prices__subtitle {
+  margin-bottom: 3rem; }
+
+.prices__text {
+  position: relative;
+  display: inline-block; }
+
+.prices__box:hover .prices__text::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -0.3rem;
+  height: 0.2rem;
+  background-color: #04B4E0; }
+
+.prices__price {
+  padding-bottom: 1rem; }
+
+.prices__number {
+  font-size: 4.2rem;
+  line-height: 1;
+  color: #222222;
+  display: block; }
+
+.prices__advice {
+  color: #888;
+  display: block; }
+
+.prices__buy {
+  padding-top: 2.5rem;
+  padding-bottom: 3rem; }
+
+.prices__btn {
+  display: inline-block;
+  border: 2px solid #E5E6E7;
+  box-shadow: 0 10px 10px -8px #E5E6E7;
+  border-radius: 3rem;
+  padding: 1.2rem 3.1rem;
+  transition: all 200ms linear; }
+
+.prices__btn:hover {
+  background-color: #04B4E0;
+  color: #FFFFFF;
+  border: 2px solid #04B4E0; }
+
+.prices__reward {
+  font-size: 1.4rem;
+  padding: 0.6rem 0; }
 
 /*# sourceMappingURL=style.css.map */
