--- a/06-maquetacion-web1/assets/css/style.css
+++ b/06-maquetacion-web1/assets/css/style.css
@@ -43,178 +43,6 @@ form, input, select, textarea, button, label {
   display: block;
   color: inherit; }
 
-/*DEFINICIÓN VARIABLES*/
-/*SOBRE MÍ*/
-.about__header {
-  display: inline-block;
-  margin-bottom: 4.5rem; }
-
-.about__title {
-  font-size: 3.2rem;
-  position: relative; }
-
-.about__title::after {
-  content: "";
-  position: absolute;
-  top: 20px;
-  right: -25px;
-  width: 50px;
-  height: 30px;
-  background-image: linear-gradient(to right top, #04B4E0, #04B4E0 1px, transparent 0px, transparent 100%);
-  background-size: 0.6rem 0.6rem;
-  opacity: 0.5; }
-
-.title__color {
-  color: #04B4E0; }
-
-/*INFORMACION PERSONAL*/
-.about__personal-info {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  margin-bottom: 5rem; }
-
-.personal-info__bio {
-  flex-basis: 56%; }
-
-.personal-info__description {
-  font-size: 1.5rem;
-  line-height: 2.4rem; }
-
-.personal-info__data {
-  flex-basis: 44%;
-  padding: 0 1.5rem; }
-
-.personal-info__option {
-  margin-bottom: 1rem; }
-
-.personal-info__title {
-  margin-right: 0.5rem;
-  color: #04B4E0;
-  font-weight: 600; }
-
-/*SERVICIOS*/
-.about__services,
-.about__reviews,
-.about__clients,
-.about__prices,
-.about__extra {
-  width: 100%;
-  margin-bottom: 2rem; }
-
-.services__header,
-.reviews__header,
-.clients__header,
-.prices__header,
-.extra__header {
-  display: inline-block;
-  padding-right: 1.2rem;
-  position: relative;
-  margin-bottom: 2.5rem; }
-
-.services__title,
-.reviews__title,
-.clients__title,
-.prices__title,
-.extra__title {
-  font-size: 2.1rem; }
-
-.services__title::after,
-.reviews__title::after,
-.clients__title::after,
-.prices__title::after,
-.extra__title::after {
-  content: "";
-  position: absolute;
-  top: 15px;
-  right: 0px;
-  width: 30px;
-  height: 20px;
-  background-image: linear-gradient(to right top, #04B4E0, #04B4E0 1.5px, transparent 0px, transparent 100%);
-  background-size: 0.6rem 0.6rem;
-  opacity: 0.5; }
-
-.services__container {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap; }
-
-.sevices__service {
-  flex-basis: calc(50% - 3rem);
-  margin-right: 3rem;
-  margin-bottom: 2.5rem; }
-
-.service__my-icon {
-  color: #04B4E0;
-  font-size: 3.8rem; }
-
-.service__title {
-  font-size: 1.8rem;
-  margin: 0.5rem 0; }
-
-.service__description {
-  font-size: 1.5rem;
-  text-align: justify; }
-
-/*REVIEWS*/
-.reviews__container {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap; }
-
-.reviews__review {
-  flex-basis: calc(50% - 2.5rem);
-  border: 2px solid #E5E6E7;
-  border-radius: 2rem;
-  padding-top: 0;
-  padding-right: 2.5rem;
-  padding-left: 2.5rem;
-  padding-bottom: 1.5rem;
-  margin-right: 2.5rem;
-  margin-top: 4.5rem;
-  margin-bottom: 1rem; }
-
-.review__image-container {
-  width: 100%; }
-
-.review__image {
-  max-width: 9rem;
-  max-height: 9rem;
-  border-radius: 9rem;
-  margin: 0 auto;
-  margin-top: -4.5rem;
-  margin-bottom: 2rem;
-  box-shadow: 0px 10px 10px -8px rgba(0, 0, 0, 0.22); }
-
-.review__description {
-  margin-bottom: 1rem; }
-
-.review__text {
-  font-size: 1.5rem;
-  line-height: 2.4rem; }
-
-.review__author {
-  margin-top: 2rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between; }
-
-.review__name {
-  margin-bottom: 0.5rem;
-  font-size: 1.5rem; }
-
-.review__company {
-  color: #A5A6A7;
-  font-weight: 300;
-  font-size: 1.3rem; }
-
-.review__icon {
-  font-size: 4rem;
-  opacity: 0.5;
-  color: #04B4E0; }
-
 .content__page::-webkit-scrollbar {
   width: 25px;
   background-color: transparent;
@@ -458,17 +286,20 @@ body {
   box-shadow: 0 0 3rem -0.5rem rgba(0, 0, 0, 0.15);
   border-radius: 6rem; }
 
-.menu__icon {
-  color: #B5B6B7;
-  font-size: 2.8rem;
-  transition: all 300ms ease-in-out; }
-
 .menu__option {
   display: block;
   width: 100%;
   text-align: center; }
 
+.menu__icon {
+  color: #B5B6B7;
+  font-size: 2.8rem;
+  transition: all 300ms ease-in-out; }
+
 .menu__icon:hover {
+  color: #04B4E0; }
+
+.menu__link--active:active {
   color: #04B4E0; }
 
 .menu__overlay {
@@ -486,6 +317,202 @@ body {
 .menu__option:hover .menu__overlay {
   opacity: 1;
   right: 100%; }
+
+/*DEFINICIÓN VARIABLES*/
+/*SOBRE MÍ*/
+.content__about,
+.content__resume,
+.content__portfolio,
+.content__blog {
+  display: block;
+  height: 100%;
+  min-height: 100%;
+  padding: 6rem;
+  padding-right: 3rem;
+  overflow: auto; }
+
+.about__header,
+.resume__header,
+.portfolio__header,
+.blog__header {
+  display: inline-block;
+  margin-bottom: 4.5rem; }
+
+.about__title,
+.resume__title,
+.portfolio__title,
+.blog__title {
+  font-size: 3.2rem;
+  position: relative; }
+
+.about__title::after,
+.resume__title::after,
+.portfolio__title::after,
+.blog__title::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  right: -25px;
+  width: 50px;
+  height: 30px;
+  background-image: linear-gradient(to right top, #04B4E0, #04B4E0 1px, transparent 0px, transparent 100%);
+  background-size: 0.6rem 0.6rem;
+  opacity: 0.5; }
+
+.title__color,
+.subtitle__color {
+  color: #04B4E0; }
+
+/*INFORMACION PERSONAL*/
+.about__personal-info {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-bottom: 5rem; }
+
+.personal-info__bio {
+  flex-basis: 56%; }
+
+.personal-info__description {
+  font-size: 1.5rem;
+  line-height: 2.4rem; }
+
+.personal-info__data {
+  flex-basis: 44%;
+  padding: 0 1.5rem; }
+
+.personal-info__option {
+  margin-bottom: 1rem; }
+
+.personal-info__title {
+  margin-right: 0.5rem;
+  color: #04B4E0;
+  font-weight: 600; }
+
+/*SERVICIOS*/
+.about__services,
+.about__reviews,
+.about__clients,
+.about__prices,
+.about__extra {
+  width: 100%;
+  margin-bottom: 2rem; }
+
+.services__header,
+.reviews__header,
+.clients__header,
+.prices__header,
+.extra__header,
+.resume__subheader {
+  display: inline-block;
+  padding-right: 1.2rem;
+  position: relative;
+  margin-bottom: 2.5rem; }
+
+.services__title,
+.reviews__title,
+.clients__title,
+.prices__title,
+.extra__title,
+.resume__subtitle {
+  font-size: 2.1rem; }
+
+.services__title::after,
+.reviews__title::after,
+.clients__title::after,
+.prices__title::after,
+.extra__title::after,
+.resume__subtitle::after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  right: 0px;
+  width: 30px;
+  height: 20px;
+  background-image: linear-gradient(to right top, #04B4E0, #04B4E0 1.5px, transparent 0px, transparent 100%);
+  background-size: 0.6rem 0.6rem;
+  opacity: 0.5; }
+
+.services__container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+
+.sevices__service {
+  flex-basis: calc(50% - 3rem);
+  margin-right: 3rem;
+  margin-bottom: 2.5rem; }
+
+.service__my-icon {
+  color: #04B4E0;
+  font-size: 3.8rem; }
+
+.service__title {
+  font-size: 1.8rem;
+  margin: 0.5rem 0; }
+
+.service__description {
+  font-size: 1.5rem;
+  text-align: justify; }
+
+/*REVIEWS*/
+.reviews__container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+
+.reviews__review {
+  flex-basis: calc(50% - 2.5rem);
+  border: 2px solid #E5E6E7;
+  border-radius: 2rem;
+  padding-top: 0;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+  padding-bottom: 1.5rem;
+  margin-right: 2.5rem;
+  margin-top: 4.5rem;
+  margin-bottom: 1rem; }
+
+.review__image-container {
+  width: 100%; }
+
+.review__image {
+  max-width: 9rem;
+  max-height: 9rem;
+  border-radius: 9rem;
+  margin: 0 auto;
+  margin-top: -4.5rem;
+  margin-bottom: 2rem;
+  box-shadow: 0px 10px 10px -8px rgba(0, 0, 0, 0.22); }
+
+.review__description {
+  margin-bottom: 1rem; }
+
+.review__text {
+  font-size: 1.5rem;
+  line-height: 2.4rem; }
+
+.review__author {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
+.review__name {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem; }
+
+.review__company {
+  color: #A5A6A7;
+  font-weight: 300;
+  font-size: 1.3rem; }
+
+.review__icon {
+  font-size: 4rem;
+  opacity: 0.5;
+  color: #04B4E0; }
 
 .about__clients {
   width: 100%;
@@ -531,7 +558,8 @@ body {
 .prices__box:last-of-type {
   margin-right: 0rem; }
 
-.prices__box:hover {
+.prices__box:hover,
+.extra__info:hover {
   box-shadow: 0px 18px 24px -5px rgba(0, 0, 0, 0.15);
   transform: translateY(-1rem); }
 
@@ -584,5 +612,349 @@ body {
 .prices__reward {
   font-size: 1.4rem;
   padding: 0.6rem 0; }
+
+.extra__container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 1.5rem; }
+
+.extra__info {
+  flex-basis: 30%;
+  border: 2px solid #E5E6E7;
+  text-align: center;
+  border-radius: 1rem;
+  padding: 2.5rem 1rem;
+  transition: all 300ms ease-in-out; }
+
+.extra__info:hover {
+  transform: translateY(-0.5rem); }
+
+.extra__icon {
+  font-size: 3.3rem;
+  color: #04B4E0;
+  margin-bottom: 1rem; }
+
+.extra__subtitle {
+  font-size: 1.5rem;
+  margin: 1.5rem; }
+
+.extra__quantity {
+  display: block;
+  margin: 1.5rem 1rem;
+  margin-bottom: 0;
+  font-size: 3.6rem;
+  line-height: 5rem;
+  color: #888; }
+
+.content__page::-webkit-scrollbar {
+  width: 25px;
+  background-color: transparent;
+  /* Tamaño del scroll en vertical */ }
+
+.content__page::-webkit-scrollbar-thumb {
+  border: 10px solid transparent;
+  box-shadow: none;
+  border-radius: 40px; }
+
+.content__page:hover::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 0 10px #D3D3D3; }
+
+.content__page:hover::-webkit-scrollbar-thumb:hover {
+  border: 8px solid transparent;
+  box-shadow: inset 0 0 0 10px #04B4E0; }
+
+.content__page::-webkit-scrollbar-track {
+  margin: 40px 0; }
+
+/*Barra info*/
+.layout__aside::-webkit-scrollbar {
+  width: 25px;
+  background-color: #04B4E0; }
+
+.layout__aside::-webkit-scrollbar-thumb {
+  border: 10px solid transparent;
+  box-shadow: none;
+  border-radius: 40px; }
+
+.layout__aside:hover::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 0 10px #FFFFFF; }
+
+.layout__aside:hover::-webkit-scrollbar-thumb:hover {
+  border: 8px solid transparent;
+  box-shadow: inset 0 0 0 10px #FFFFFF; }
+
+.layout__aside::-webkit-scrollbar-track {
+  margin: 40px 0; }
+
+/*Curriculum*/
+.resume__container {
+  width: 100%;
+  display: flex;
+  flex-direction: row; }
+
+.resume__left {
+  flex-basis: 58%;
+  margin-right: 1.5rem; }
+
+.resume__timelines {
+  margin-bottom: 5rem; }
+
+.timelines__timeline {
+  position: relative;
+  width: 100%;
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: row; }
+
+.timeline__header {
+  flex-basis: 30%;
+  text-align: right;
+  padding-right: 2.5rem; }
+
+.timeline__year {
+  margin: 0.3rem 0;
+  line-height: 1.9rem;
+  font-size: 1.4rem; }
+
+.timeline__company {
+  display: block;
+  font-size: 1.3rem;
+  font-weight: lighter;
+  color: #A5A6A7; }
+
+.timeline__description {
+  width: 70%;
+  padding-left: 2.5rem;
+  padding-right: 1.5rem; }
+
+.timeline__title {
+  font-size: 1.6rem;
+  margin-bottom: 0.3rem; }
+
+.timeline__text {
+  font-size: 1.4rem;
+  margin-bottom: 1rem; }
+
+.timeline__divider {
+  width: 1px;
+  background-color: #D3D3D3;
+  position: absolute;
+  top: 0;
+  left: 30%;
+  bottom: -18px; }
+
+.timeline__divider::before {
+  content: '';
+  position: absolute;
+  margin-top: 0.4rem;
+  margin-left: -0.8rem;
+  width: 1.7rem;
+  height: 1.7rem;
+  background-color: #04B4E0;
+  border-radius: 10rem;
+  opacity: 0.25; }
+
+.timeline__divider::after {
+  content: '';
+  position: absolute;
+  margin-top: 0.8rem;
+  margin-left: -0.4rem;
+  width: 0.9rem;
+  height: 0.9rem;
+  background-color: #FFFFFF;
+  border-radius: 10rem;
+  border: 2px solid #04B4E0;
+  opacity: 1; }
+
+/*Curriculum Derecha*/
+.resume__right {
+  flex-basis: 41%;
+  padding: 0 1.5rem; }
+
+.resume__skills {
+  width: 100%;
+  margin-bottom: 3rem; }
+
+.skills__title {
+  display: flex;
+  justify-content: space-between; }
+
+.skills__text {
+  font-size: 1.3rem;
+  line-height: 1.4rem;
+  margin-bottom: 0.4rem; }
+
+.skills__number {
+  font-size: 1.1rem;
+  line-height: 1.4rem;
+  margin-bottom: 0.4rem;
+  color: #888; }
+
+.skills__progresbar {
+  height: 1rem;
+  border: 1px solid #04B4E0;
+  border-radius: 1rem;
+  background-color: #FFFFFF;
+  margin-bottom: 1.5rem; }
+
+.skills__percentage {
+  height: 0.8rem;
+  width: 40%;
+  background-color: #04B4E0;
+  border: 2px solid #FFFFFF;
+  border-radius: 1rem; }
+
+.skills__percentage--p1 {
+  width: 90%; }
+.skills__percentage--p2 {
+  width: 70%; }
+.skills__percentage--p3 {
+  width: 60%; }
+.skills__percentage--p4 {
+  width: 80%; }
+.skills__percentage--p5 {
+  width: 97%; }
+.skills__percentage--p6 {
+  width: 85%; }
+.skills__percentage--p7 {
+  width: 80%; }
+.skills__percentage--p8 {
+  width: 92%; }
+.skills__percentage--p9 {
+  width: 81%; }
+
+.knowledges__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+
+.knowledges__option {
+  padding: 0.4rem 1rem;
+  margin: 0.3rem;
+  font-size: 1.4rem;
+  background-color: #04B4E0;
+  border-radius: 0.3rem;
+  color: #FFFFFF; }
+
+.certificates__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 3rem; }
+
+.certificates__certificate {
+  flex-basis: calc(50% - 1.5rem);
+  border-radius: 0.8rem;
+  border: 2px solid #E5E6E7;
+  display: flex;
+  flex-direction: row; }
+
+.certificate__logo {
+  width: 15rem;
+  height: 100%;
+  padding: 2.5rem;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.certificate__image {
+  width: 100%; }
+
+.certificate__content {
+  padding: 2rem 2.5rem; }
+
+.certificate__title {
+  font-size: 1.6rem;
+  margin-bottom: 0.5rem; }
+
+.certificate__id {
+  display: block;
+  font-size: 1.3rem;
+  columns: #888;
+  margin-bottom: 0.3rem; }
+
+.certificate__date {
+  font-size: 1.2rem;
+  color: #888; }
+
+.portfolio__navbar {
+  margin-bottom: 3rem; }
+
+.portfolio__menu {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1.5rem; }
+
+.portfolio__option {
+  font-size: 1.3rem;
+  opacity: 0.7; }
+
+.portfolio__option--active {
+  opacity: 1; }
+
+.portfolio__link {
+  cursor: pointer; }
+
+.portfolio__link:hover {
+  color: #04B4E0;
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.25); }
+
+.portfolio__gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+
+.gallery__item {
+  position: relative;
+  flex-basis: 33%;
+  padding: 0.7rem; }
+
+.gallery__container-image {
+  overflow: hidden; }
+
+.gallery__image {
+  transition: all 300ms ease-in-out; }
+
+.gallery__item:hover .gallery__image {
+  transform: scale(1.1); }
+
+.gallery__title {
+  font-size: 1.6rem;
+  padding: 1.5rem 0;
+  font-weight: bold; }
+
+.gallery__icon {
+  opacity: 0;
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 1.6rem;
+  text-align: center;
+  line-height: 3rem;
+  background-color: #FFFFFF;
+  color: #04B4E0;
+  transition: all 450ms ease-in-out; }
+
+.gallery__category {
+  opacity: 0;
+  position: absolute;
+  top: 1.5rem;
+  left: 1.5rem;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.1rem;
+  background-color: #FFFFFF;
+  color: #555;
+  transition: all 450ms ease-in-out; }
+
+.gallery__item:hover .gallery__icon,
+.gallery__item:hover .gallery__category {
+  opacity: 1; }
 
 /*# sourceMappingURL=style.css.map */
